@@ -4896,4 +4896,8 @@ a)"xI
 
 /()(?<=(?0))/
 
+/(?<!|!(?<!))/
+
+/(?<!|!|!||||||(?<!)||(?<!)!|!||(?<!)!|!(?<!)!|!|!|!||||!!|<!)!|!||||!|/
+
 # End of testinput2 
